# cruise-ai

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUILDER-MODEL.md  CHANGELOG.md  CLAUDE.md  CODE-INTELLIGENCE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT.md  DATA_COLLECTION.md  ENRICHMENT-PROMPT.md  LICENSE  NOTICE  PRIVACY.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  SECURITY.md  TAXONOMY.md  THESIS.md  TODO.md  nextmillionai.config.json.example  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
commands/: assess.md  enrich.md  profile.md
cruise-ai-mcp/: index.js  package-lock.json  package.json
cruise_ai/: __main__.py  aggregator.py  build_profile.py  business_fit.py  cliui.py  code_intel.py  consent.py  enrichment.py  export.py  history.py  hub.py  live.py  markdown_export.py  methodology_spec.py  network.py  network_server.py  paths.py  profile_data.py  scanner.py  schema.py  scoring.py  signal_registry.py  sync_merge.py  visibility.py
docs/: ADAPTERS.md  ADDING-A-TOOL.md  ARCHITECTURE-CRUISE-AI.md  BUSINESS-FIT-MAP.md  CALIBRATION.md  DEEP-FIDELITY.md  DESIGN.md  HARDLINES.md  HOW-IT-WORKS.md  PRE-MERGE-REVIEW.md  README.md  REFERENCES.md  REPO-FLOW.md  SYNC.md  TRUST-MODEL.md  TRUST.md
nextmillionai/: __main__.py  aggregator.py  build_profile.py  business_fit.py  cliui.py  code_intel.py  consent.py  enrichment.py  export.py  history.py  hub.py  live.py  markdown_export.py  methodology_spec.py  network.py  network_server.py  paths.py  profile_data.py  scanner.py  schema.py  scoring.py  signal_registry.py  sync_merge.py  visibility.py
nextmillionai-mcp/: index.js  package-lock.json  package.json
scripts/: formula_fingerprint.py  hardline_guard.py  make_example_profile.py  proposals.py  render_methodology_registry.py
tests/: conftest.py  test_aggregator.py  test_ai_era_clamp.py  test_avatar.py  test_build_domain.py  test_business_fit.py  test_cli.py  test_cli_guide.py  test_code_intel.py  test_consent.py  test_docs_truth.py  test_engine_consistency.py  test_enrichment.py  test_export.py  test_history.py  test_lab_insights.py  test_live.py  test_markdown_export.py  test_mcp_count.py  test_methodology_doc.py  test_methodology_spec.py  test_methodology_v040.py  test_network.py  test_paths.py  test_proposals.py  test_public_seed_guard.py  (+10 more)
(+100 files in other folders)
