[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nextmillionai"
version = "1.0.0"
description = "Build your AI coding profile — scan, score, and serve."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://nextmillionai.org"
Repository = "https://github.com/nextmillionai/nextmillionai"
Documentation = "https://nextmillionai.org/docs"
Issues = "https://github.com/nextmillionai/nextmillionai/issues"

[project.optional-dependencies]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8", "pytest-cov>=5", "pre-commit>=3"]

[project.scripts]
nextmillionai = "nextmillionai.build_profile:main"

[tool.setuptools.packages.find]
include = ["nextmillionai*"]

[tool.setuptools.package-data]
nextmillionai = ["static/**/*", "docs/**/*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "--cov=nextmillionai.scoring --cov=nextmillionai.scanner --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
