[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cruise-ai"
version = "0.1.0"
description = "Self-driven AI developer coaching. Zero effort, maximum signal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []
authors = [{name = "Jimit Shah", email = "jimit24365@gmail.com"}]

[project.urls]
Repository = "https://github.com/jimit24365/cruise-ai"
Issues = "https://github.com/jimit24365/cruise-ai/issues"

[project.optional-dependencies]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8", "pytest-cov>=5", "pre-commit>=3"]

[project.scripts]
cruise-ai = "cruise_ai.build_profile:main"

[tool.setuptools.packages.find]
include = ["cruise_ai*"]

[tool.setuptools.package-data]
cruise_ai = ["static/**/*", "docs/**/*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "--cov=cruise_ai.scoring --cov=cruise_ai.scanner --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
